--- a/DAY 13/grid.css
+++ b/DAY 13/grid.css
@@ -5,15 +5,15 @@ div {
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr 2fr 1fr;
-  grid-template-rows: 2fr 1fr 4fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 .RED {
   background-color: red;
   grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row-start: 1;
-  grid-row-end: 4;
+  grid-column-end: 4;
+  /* grid-row-start: 1; */
+  /* grid-row-end: ; */
 }
 
 .GREEN {
@@ -26,10 +26,18 @@ div {
 
 .ORANGE {
   background-color: orange;
+  grid-column-start: 6;
+  grid-column-end: 7;
+  grid-row-start: 1;
+  grid-row-end: 4;
 }
 
 .BROWN {
   background-color: brown;
+  grid-column-start: 7;
+  grid-column-end: 9;
+  grid-row-start: 1;
+  grid-row-end: 3;
 }
 
 .MAGNETA {
@@ -38,11 +46,54 @@ div {
 
 .CYAN {
   background-color: cyan;
+  grid-column-start: 1;
+  grid-column-end: 6;
+  grid-row-start: 2;
+  grid-row-end: 4;
 }
 .BLACK {
   background-color: black;
+  grid-column-start: 7;
+  grid-column-end: 9;
+  grid-row-start: 3;
+  grid-row-end: 4;
+  color: aqua;
 }
 
 .TEAL {
   background-color: teal;
+  grid-column-start: 9;
+  grid-column-end: 10;
+  grid-row-start: 2;
+  grid-row-end: 4;
+}
+
+.B {
+  background-color: blueviolet;
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+
+.O {
+  background-color: burlywood;
+  grid-column-start: 4;
+  grid-column-end: 8;
+}
+
+.G {
+  background-color: chartreuse;
+  grid-column-start: 8;
+  grid-column-end: 10;
+}
+
+.M {
+  background-color: coral;
+  grid-column-start: 1;
+  grid-column-end: 10;
+  grid-row-start: 5;
+  grid-row-end: 7;
+}
+
+.BOX {
+  text-align: center;
 }
